--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url(maplibregl.css);
+
 @layer base {
   body {
     @apply bg-gray-900 text-white;
@@ -12,4 +14,9 @@
   .btn-blue {
     @apply text-white font-bold px-4 py-2 rounded bg-blue-600 hover:bg-blue-500;
   }
+}
+.maplibregl-popup {
+  max-width: 400px;
+  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  @apply text-slate-100;
 }
