--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -17,16 +17,16 @@
 }
 .maplibregl-popup {
   max-width: 400px !important;
-  @apply text-slate-100 opacity-60 hover:opacity-100;
+  @apply text-white;
 }
 .maplibregl-popup {
   @apply mt-[-20px]
 }
 .maplibregl-popup-content {
-  @apply p-2 capitalize bg-slate-900 text-lg;
+  @apply p-2 capitalize bg-slate-900/[0.7];
 }
 .mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip, .maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
-  @apply border-t-black;
+  @apply border-t-slate-900/[0.7];
 }
 .mapboxgl-popup-close-button {
   @apply top-0 right-2 text-xl;
